--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/assets/logo2.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="../news-portal-frontend/src/assets/logo2.ico"
+    />
     <title>news-portal-frontend</title>
   </head>
   <body>
