after diploy update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       type="image/png"
       href="../news-portal-frontend/src/assets/logo2.ico"
     />
-    <title>news-portal-frontend</title>
+    <title>protidin-jonotar-news.</title>
   </head>
   <body>
     <div id="root"></div>
